test/nl/formats/liberty/benchmarks/errors/malformed_bundle_member_error.lib
library (example) {
  cell ("cell_def") {
    bundle (D) {
      members (D0);
      pin () {
        direction : input;
      }
    }
  }
}
